商场模仿  底部栏切换，recycleview使用，cardview使用

--- a/KeepLearn/theyear/src/main/res/values/strings.xml
+++ b/KeepLearn/theyear/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">theyear</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    
+    <string name="home">第一</string>
+    <string name="second">第二</string>
+    <string name="third">第三</string>
+    <string name="fourth">第四</string>
+    <string name="fifth">第五</string>
+
+
 </resources>
